# milvusdb

./: .gitignore  README.md  pyproject.toml  test.py  test_con.py
.github/workflows/: test.yml
src/milvusdb/: __init__.py  connection.py  cursor.py
src/milvusdb/converter/: const.py  dialect.py  transform.py  type.py  validation.py
src/milvusdb/converter/parse/: __init__.py  base.py
src/milvusdb/converter/parse/create/: __init__.py  base.py  field.py  index.py  type.py
src/milvusdb/converter/parse/insert/: __init__.py  base.py
src/milvusdb/errors/: __init__.py  base.py  database.py
tests/: test_base.py
